--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 
   <header>
     <!-- Remplace logo-mca.png par ton logo -->
-    <img src="logo-mca.png" alt="Logo Mouloudia Club d'Alger" />
+    <img src="ChatGPT Image Dec 14, 2025, 03_18_37 PM.png" alt="Logo Mouloudia Club d'Alger" />
     <h1>Mouloudia Club d'Alger</h1>
     <p class="subtitle">Page officielle – Doyen des clubs algériens</p>
   </header>
 
   <div class="container">
 
-    <a class="btn" href="tel:+213000000000">📞 Appeler le club</a>
+    <a class="btn" href="tel:0771651625">📞 Appeler MAICHI MAAMAR</a>
 
-    <a class="btn" href="https://www.facebook.com/" target="_blank">📘 Facebook officiel</a>
-    <a class="btn" href="https://www.instagram.com/" target="_blank">📸 Instagram</a>
-    <a class="btn" href="https://www.tiktok.com/" target="_blank">🎵 TikTok</a>
+    <a class="btn" href="https://www.facebook.com/share/17oA9vzaya/" target="_blank">📘 Facebook</a>
+    <a class="btn" href="https://www.instagram.com/maichi.theair?igsh=MTVkemRnanFxMmJw" target="_blank">📸 Instagram</a>
+    <a class="btn" href="https://www.tiktok.com/@the_air13?_r=1&_t=ZM-91rqWh2dW03" target="_blank">🎵 TikTok</a>
 
-    <a class="btn" href="https://www.facebook.com/" target="_blank">⭐ Page spéciale supporters MCA</a>
+    <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA</a>
 
   </div>
 
