--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mouloudia Club d'Alger | Officiel</title>
 
-  <meta name="description" content="Page officielle du Mouloudia Club d'Alger – Appel direct et réseaux sociaux." />
+  <meta name="description" content="Mouloudia Club d'Alger – Appel direct et réseaux sociaux." />
 
   <style>
     body {
@@ -17,7 +17,7 @@
     }
 
     header {
-      padding: 30px 20px;
+      padding: 90px 60px;
     }
 
     header img {
