--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     }
 
     header {
-      padding: 90px 60px;
+      padding: 30px 20px;
     }
 
     header img {
-      width: 120px;
+      width: 360px;
       margin-bottom: 15px;
     }
 
     h1 {
       margin: 10px 0 5px;
-      font-size: 2em;
+      font-size: 3em;
     }
 
     p.subtitle {
@@ -71,7 +71,7 @@
     <!-- Remplace logo-mca.png par ton logo -->
     <img src="ChatGPT Image Dec 14, 2025, 03_18_37 PM.png" alt="Logo Mouloudia Club d'Alger" />
     <h1>Mouloudia Club d'Alger</h1>
-    <p class="subtitle">Page officielle – Doyen des clubs algériens</p>
+    <p class="subtitle">Doyen des clubs algériens</p>
   </header>
 
   <div class="container">
