--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
 
   <footer>
-    © 2025 Mouloudia Club d'Alger – Tous droits réservés
+    © 2025 Mouloudia Club d'Alger
   </footer>
 
 </body>
