--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@
 
     <a class="btn" href="tel:0771651625">📞 Appeler MAICHI MAAMAR</a>
 
+    <h3>Mes réseaux sociaux</h3>
+    
     <a class="btn" href="https://www.facebook.com/share/17oA9vzaya/" target="_blank">📘 Facebook</a>
     <a class="btn" href="https://www.instagram.com/maichi.theair?igsh=MTVkemRnanFxMmJw" target="_blank">📸 Instagram</a>
     <a class="btn" href="https://www.tiktok.com/@the_air13?_r=1&_t=ZM-91rqWh2dW03" target="_blank">🎵 TikTok</a>
+
+<h3>Actualités MCA</h3>
+    
     <a class="btn" href="https://www.google.com/search?q=classement+MCA&rlz=1C1GCEU_enDZ968DZ968&oq=classement+MCA&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDYwMzlqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank"> classement championnat d'algerie</a>
     <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA</a>
     <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA</a>
