--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <img src="ChatGPT Image Dec 14, 2025, 03_18_37 PM.png" alt="Logo Mouloudia Club d'Alger" />
     <h1>Mouloudia Club d'Alger</h1>
     <p class="subtitle">Doyen des clubs algériens</p>
+    <h1>نادي مولودية الجزائر</h1>
+    <p class="subtitle">عميد الأندية الجزائرية</p>
   </header>
 
   <div class="container">
