--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <header>
     <!-- Remplace logo-mca.png par ton logo -->
-    <img src="ChatGPT Image Dec 14, 2025, 03_18_37 PM.png" alt="Logo Mouloudia Club d'Alger" />
+    <img src="Sans titre.png" alt="Logo Mouloudia Club d'Alger" />
     <h1>Mouloudia Club d'Alger</h1>
     <p class="subtitle">Doyen des clubs algériens</p>
     <h1>نادي مولودية الجزائر</h1>
@@ -80,7 +80,7 @@
 
     <a class="btn" href="tel:0771651625">📞 Appeler MAICHI MAAMAR</a>
 
-    <h3>Mes réseaux sociaux</h3>
+    <h3>Mes réseaux sociaux / مواقع التواصل الإجتماعي</h3>
     
     <a class="btn" href="https://www.facebook.com/share/17oA9vzaya/" target="_blank">📘 Facebook</a>
     <a class="btn" href="https://www.instagram.com/maichi.theair?igsh=MTVkemRnanFxMmJw" target="_blank">📸 Instagram</a>
