--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <header>
     <!-- Remplace logo-mca.png par ton logo -->
-    <img src="Sans titre.png" alt="Logo Mouloudia Club d'Alger" />
+    <img src="IMG_20251226_084709.jpg" alt="Logo Mouloudia Club d'Alger" />
     <h1>Mouloudia Club d'Alger</h1>
     <p class="subtitle">Doyen des clubs algériens</p>
     <h1>نادي مولودية الجزائر</h1>
@@ -88,9 +88,9 @@
 
 <h3>Actualités MCA</h3>
     
-    <a class="btn" href="https://www.google.com/search?q=classement+MCA&rlz=1C1GCEU_enDZ968DZ968&oq=classement+MCA&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDYwMzlqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank"> classement championnat d'algerie</a>
-    <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA</a>
-    <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA</a>
+    <a class="btn" href="https://www.google.com/search?q=classement+MCA&rlz=1C1GCEU_enDZ968DZ968&oq=classement+MCA&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDYwMzlqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank"> classement championnat d'algerie / جدول ترتيب الفريق</a>
+    <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA / جدول مباريات الفريق</a>
+    <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a>
 
   </div>
 
