--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     <p class="subtitle">Doyen des clubs algériens</p>
     <h1>نادي مولودية الجزائر</h1>
     <p class="subtitle">عميد الأندية الجزائرية</p>
+    <div class="image-bas">
+    <img src="images/supporters.png" alt="Supporters MCA">
+</div>
   </header>
 
   <div class="container">
