--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h1>نادي مولودية الجزائر</h1>
     <p class="subtitle">عميد الأندية الجزائرية</p>
     <div class="image-bas">
-    <img src="images/supporters.png" alt="Supporters MCA">
+    <img src="IMG_20251230_142425.png" alt="Supporters MCA">
 </div>
   </header>
 
