--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
     <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a>
 
   </div>
-
+.image-bas img {
+    width: 100%;
+    max-width: 300px;
+    border-radius: 40px;
+}
   <div class="image-bas">
     <img src="IMG_20251230_142425.png" alt="Supporters MCA">
   </div>
