--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA / جدول مباريات الفريق</a>
     <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a>
 
-  </div>
-.image-bas img {
-    width: 100%;
-    max-width: 300px;
-    border-radius: 40px;
-}
+  
+.header img-bas {
+      width: 360px;
+      margin-bottom: 15px;
+    }
+
   <div class="image-bas">
     <img src="IMG_20251230_142425.png" alt="Supporters MCA">
   </div>
