--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <div class="container">
 
-    <a class="btn" href="tel:0771651625">📞 Appeler MAICHI MAAMAR</a>
+    <a class="btn" href="tel:0771651625">📞 Appeler MAICHI MAAMAR الاتصال ب</a>
 
     <h3>Mes réseaux sociaux / مواقع التواصل الإجتماعي</h3>
     
@@ -95,8 +95,8 @@
 
   
 .header img-bas {
-      width: 360px;
-      margin-bottom: 15px;
+      width: 200px;
+      margin-bottom: 00px;
     }
 
   <div class="image-bas">
