--- a/index.html
+++ b/index.html
@@ -93,6 +93,207 @@
     <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA / جدول مباريات الفريق</a>
     <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a>
 
+Vous avez dit :
+Image chargée
+Utilisé le maillot officiel du club mca sur la couverture de l'image 
+ChatGPT a dit :
+
+Image créée
+Image générée
+Image générée
+Image générée
+
+
+
+Partager
+Vous avez dit :
+Es que Mobilis est sponsored du mca
+ChatGPT a dit :
+Non — Mobilis n’est pas le sponsor officiel du MC Alger (MCA) en tant que partenaire direct du club actuellement. Voici ce qu’on sait :
+
+✅ Mobilis est le sponsor titre du championnat de Ligue 1 en Algérie, nommé Ligue 1 Mobilis — donc le nom Mobilis apparaît sur le championnat dans lequel le MCA joue. 
+Grokipedia
+
+❌ Mais le sponsor officiel du MC Alger n’est pas Mobilis à l’heure actuelle : le club a signé récemment un contrat de sponsoring avec Ooredoo, un opérateur de téléphonie mobile, qui est bien son partenaire principal pour plusieurs saisons. 
+Football Algérien - DZFOOT.COM
++1
+
+📌 En résumé :
+
+Mobilis est associé au championnat (Ligue 1 Mobilis), pas directement au maillot du club. 
+Grokipedia
+
+Ooredoo est une sponsor officiel du MC Alger et a signé un partenariat avec le club. 
+Football Algérien - DZFOOT.COM
++1
+
+Si tu veux que je vérifie quel sponsor apparaît actuellement sur le maillot du MCA (logo), je peux te donner l’information disponible.
+
+Vous avez dit :
+Oui je veux 
+ChatGPT a dit :
+Voici ce qu’on sait vraiment à propos du sponsor qui apparaît (ou devrait apparaître) sur le maillot du MC Alger :
+
+🎽 Sponsor officiel du MC Alger (MCA)
+✅ Ooredoo est le sponsor officiel du Mouloudia Club d’Alger depuis un contrat signé début 2024 — l’entreprise y figure comme partenaire principal. 
+Ooredoo Algeria
+
+🔍 Mobilis dans le contexte du club
+📌 Mobilis n’est pas le sponsor officiel du maillot du MC Alger.
+Il est sponsor du championnat algérien (Ligue 1 Mobilis), mais cela ne signifie pas qu’il figure obligatoirement sur le maillot du MCA lui-même. 
+Mobilis
+
+📌 Autres partenaires liés au club
+Le club a aussi eu dans le passé des accords avec d’autres sociétés (par exemple Hisense dans certains contrats précédents). 
+Football Algérien - DZFOOT.COM
+
+📌 En résumé :
+
+Le sponsor officiel actuel du maillot du MC Alger est Ooredoo. 
+Ooredoo Algeria
+
+Mobilis est nommé dans le contexte du championnat, pas comme sponsor principal du club. 
+Mobilis
+
+Si tu veux, je peux aussi te dire à quoi ressemble le vrai maillot officiel actuel du MCA (photo/logo du sponsor à l’avant).
+
+Vous avez dit :
+Mettre ooredoo au lieu Mobilis sur le maillot du club qui ce trouve sur la couverture 
+ChatGPT a dit :
+
+Image créée
+Image générée
+Image générée
+Image générée
+
+
+
+Partager
+Vous avez dit :
+Comment rajouter une image en bas sur le fichier index html dans la page GitHub 
+ChatGPT a dit :
+Voici la méthode simple et correcte pour ajouter une image en bas de ton fichier index.html sur GitHub Pages 👇
+
+✅ 1. Mettre l’image dans ton dépôt GitHub
+Ouvre ton dépôt GitHub
+
+Clique sur Add file → Upload files
+
+Téléverse ton image (ex: image-bas.png)
+
+Clique sur Commit changes
+
+👉 Idéalement, crée un dossier images/
+Exemple : images/supporters.png
+
+✅ 2. Ajouter l’image en bas du fichier index.html
+Ouvre index.html et juste avant </body> ajoute ce code :
+
+<!-- Image en bas de page -->
+<div class="image-bas">
+    <img src="images/supporters.png" alt="Image supporters MCA">
+</div>
+📌 Si ton image est à la racine du projet :
+
+<img src="supporters.png">
+✅ 3. Ajouter du style (CSS) pour un rendu propre
+Dans la balise <style> ou ton fichier CSS :
+
+.image-bas {
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.image-bas img {
+    width: 100%;
+    max-width: 350px; /* taille carte NFC */
+    border-radius: 15px;
+}
+✅ 4. Version spéciale carte NFC (plein largeur)
+.image-bas img {
+    width: 100%;
+    display: block;
+}
+🧪 5. Vérifier sur GitHub Pages
+Va dans Settings → Pages
+
+Source : main / root
+
+Ouvre ton lien :
+
+https://ton-nom.github.io/nom-du-projet/
+🔥 Astuce design premium (effet glow)
+.image-bas img {
+    box-shadow: 0 0 20px rgba(0,255,0,0.6);
+}
+Si tu veux, envoie-moi ton index.html ou dis-moi :
+
+📱 carte NFC mobile ?
+
+🟥🟩 couleurs MCA ?
+
+🖼 image statique ou animée ?
+
+Je t’aide à l’intégrer proprement et professionnellement 💪
+
+Vous avez dit :
+Je veux intégré une image en bas de la page, que dois je écrire sur le fichier index html
+ChatGPT a dit :
+Voici exactement quoi écrire dans ton fichier index.html pour afficher une image en bas de la page 👇
+(copie-colle simplement)
+
+✅ Code HTML minimal (obligatoire)
+👉 À coller juste avant </body> :
+
+<div class="image-bas">
+    <img src="image-bas.png" alt="Image bas de page">
+</div>
+📌 Remplace image-bas.png par le nom exact de ton image
+(ex : supporters.png ou images/supporters.png)
+
+✅ Code CSS (pour un rendu propre)
+👉 À coller dans <style> (ou ton fichier CSS) :
+
+.image-bas {
+    width: 100%;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.image-bas img {
+    width: 100%;
+    max-width: 360px; /* format carte NFC */
+    border-radius: 15px;
+}
+🧪 Exemple COMPLET dans index.html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>MCA NFC</title>
+
+<style>
+.image-bas {
+    width: 100%;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.image-bas img {
+    width: 100%;
+    max-width: 360px;
+    border-radius: 15px;
+}
+</style>
+</head>
+
+<body>
+
+<!-- Image en bas -->
+<div class="image-bas">
+    <img src="images/supporters.png" alt="Supporters MCA">
+</div>
 
   <footer>
     © 2025 Mouloudia Club d'Alger
