--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Voici exactement quoi écrire dans ton fichier index.html pour afficher une imag
 
 <!-- Image en bas -->
 <div class="image-bas">
-    <img src="images/supporters.png" alt="Supporters MCA">
+    <img src="IMG_20251230_142425.png" alt="Supporters MCA">
 </div>
 
   <footer>
