--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
     <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA / جدول مباريات الفريق</a>
     <a class="btn" href="https://www.facebook.com/?CA.tv.dZ1" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a
 
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>MCA NFC</title>
 <style>
 .image-bas {
     width: 100%;
