--- a/index.html
+++ b/index.html
@@ -98,27 +98,17 @@
 <head>
 <meta charset="UTF-8">
 <title>MCA NFC</title>
-<style>
-.image-bas {
-    width: 100%;
-    margin-top: 30px;
-    text-align: center;
+  <style>
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url("IMG_20251230_142425.png");
+    background-size: cover;      /* l’image couvre tout l’écran */
+    background-position: center; /* centrée */
+    background-repeat: no-repeat;
+    background-attachment: fixed; /* effet premium */
 }
-
-.image-bas img {
-    width: 100%;
-    max-width: 360px;
-    border-radius: 15px;
-}
-</style>
-</head>
-
-<body>
-
-<!-- Image en bas -->
-<div class="image-bas">
-    <img src="IMG_20251230_142425.png" alt="Supporters MCA">
-</div>
+  </style>
 
   <footer>
     © 2025 Mouloudia Club d'Alger
