--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
     <a class="btn" href="https://www.google.com/search?q=classement+MCA&rlz=1C1GCEU_enDZ968DZ968&oq=classement+MCA&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDYwMzlqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank"> classement championnat d'algerie / جدول ترتيب الفريق</a>
     <a class="btn" href="https://www.footmercato.net/club/mc-alger/calendrier" target="_blank"> calendrier des matchs MCA / جدول مباريات الفريق</a>
-    <a class="btn" href="https://www.facebook.com/mcalager.officiel" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a
+    <a class="btn" href="https://www.facebook.com/share/17qLGB5Q2V/" target="_blank">⭐ Page spéciale supporters MCA/ ٱخر اخبار الفريق</a
 
 <!DOCTYPE html>
 <html lang="fr">
